--- a/passformacos/Credits.html
+++ b/passformacos/Credits.html
@@ -1,8 +1,8 @@
 
 <!DOCTYPE html><html><head><meta charset="utf-8"><title>Open Source Software.md</title><style></style></head><body id="preview">
     <h1><a id="Open_Source_Software_0"></a>Open Source Software</h1>
-    <p>Passafari and all resources are Open Source with the following licenses and agreements:</p>
-    <h2><a id="Passafarihttpsgithubcomadur1990tabrepositories_BSD3Clause_4"></a><a href="https://github.com/adur1990?tab=repositories">Passafari</a>: BSD-3-Clause</h2>
+    <p>Pass for macOS and all resources are Open Source with the following licenses and agreements:</p>
+    <h2><a id="Passformacoshttpsgithubcomadur1990tabrepositories_BSD3Clause_4"></a><a href="https://github.com/adur1990?tab=repositories">Pass for macOS</a>: BSD-3-Clause</h2>
     <p>Copyright 2018 Artur Sterz</p>
     <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
     <ol>
